ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: message-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
#        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
        - host: a3a0f35cc0ba649709475437ddfa82e7-618409603.eu-north-1.elb.amazonaws.com
          http:
              paths:
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: api-api-helm
                            port:
                                number: 80
                  - path: /server/
                    pathType: Prefix
                    backend:
                        service:
                            name: socket-socket-helm
                            port:
                                number: 80
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: web-web-helm
                            port:
                                number: 80
